FUTBOL BRASIL: Merge de commit ea4054e515a8fdc1ed43177b27aa0f50e3cac082 "Mejoras evento swipe con el menu, trim de código y scrolling tabs bases" en branch dev
Conflicts:
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/main.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/match.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/prediction.js
	FutbolBrasil/futbol-brasil/app/styles/default.css

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -1,8 +1,8 @@
 
 <div id="wrapperH">
-    <div id="scroller" style="width:{{widthTotal}}px;">
+    <div id="scroller" ng-style="getTotalWidth()">
         <ul>
-            <li style="width:{{width}}px;" ng-repeat="page in pages" on-last-repeat >
+            <li ng-style="getWidth()" ng-repeat="page in pages" on-last-repeat>
 
                 <div class="container">
 
