FUTBOL BRASIL: Merge de commit 7b299e74fec9c707a98ef7d56f4de2b4b9788727 "isActiveButton, catch y success" en branch dev
Conflicts:
	FutbolBrasil/futbol-brasil/app/js/application.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/main.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/news.js
	FutbolBrasil/futbol-brasil/app/modules/core/controllers/prediction.js
	FutbolBrasil/futbol-brasil/app/modules/core/services/domain.js

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -1,10 +1,10 @@
 <div>
-    <div id="wrapper" ng-class="{hide: !isActive('news')}">
+    <div id="wrapper">
         <div class="scroller">
             <div class="container" >
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 news"
-                         ng-repeat="item in news"
+                         ng-repeat="item in news track by item.idNews"
                          ng-click="showContentNews(item)">
                         <h5 class="title">{{item.title}}</h5>
                         <i class="icon mdi-device-access-time"></i>
