--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -2,7 +2,7 @@
 <div id="wrapperH">
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
-            <li ng-style="getWidth()" ng-repeat="page in pages" on-last-repeat>
+            <li ng-style="getWidth()" ng-repeat="page in pages track by page.id" on-last-repeat>
 
                 <div class="container">
 
