--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -90,7 +90,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="event in action.events"  >
+            <tr ng-repeat="event in action.events  track by event.id_game_match_events"  >
               <td style="width: 20% !important;" >
                 <span style="font-weight: bold; font-size: 1.6em;">{{event.action_minute}}'</span>
               </td>
