--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -7,17 +7,16 @@
 
                         <div class="row header">
 
-
-                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;">
-                            <span ng-bind="item.leagues[$index-1].name"></span>
+                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;" ng-click="prevPage()">
+                            <button ng-bind="item.leagues[$index-1].name" ></button>
                           </div>
 
                           <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
                             <h4 ng-bind="league.name" class="caption"></h4>
                           </div>
 
-                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
-                            <span ng-bind="item.leagues[$index+1].name"></span>
+                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" ng-click="nextPage()">
+                            <button ng-bind="item.leagues[$index+1].name" ></button>
                           </div>
 
                         </div>
