fixes pequeños de UI y en primera seccion de palpites

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -16,12 +16,9 @@
     </div>
 
     <div id="wrapper2" class="page" style="z-index: 2; left: 100%;" >
-        <div class="row-back" ng-click="prevPage()">
+        <div class="row-back">
             <div class="row" style="margin-top: 10px !important;">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
-                    <i class="icon mdi-hardware-keyboard-arrow-left" style="font-size: 1.8em; margin-left: 10px;"></i>
-                </div>
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 pull-right" style="text-align: right;" >
                     <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
                 </div>
             </div>
@@ -38,14 +35,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row-back" ng-click="prevPage()">
-          <div class="row" style="margin-top: 10px !important;">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: right;" >
-              <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
-            </div>
-          </div>
         </div>
     </div>
 </div>
