--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -2,39 +2,26 @@
   <div id="wrapperH">
     <div id="scroller" ng-style="getTotalWidth()">
       <ul>
-
-
         <li ng-style="getWidth()" ng-repeat="league in item.leagues" >
           <div class="container">
-
             <div class="row header">
-
-              <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;">
+              <div class="col-xs-3 tabs text-left">
                 <span ng-bind="item.leagues[$index-1].name"></span>
               </div>
-
-              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
+              <div class="col-xs-6" >
                 <h4 ng-bind="league.name" class="caption"></h4>
               </div>
-
-              <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
+              <div class="col-xs-3 tabs text-right">
                 <span ng-bind="item.leagues[$index+1].name"></span>
               </div>
-
-
             </div>
-
 
             <div class="row">
               <div id="{{_this.wrapper.getName($index)}}" class="wrapper" >
                 <div class="scroller" >
                   <div class="container">
-
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="fixture in league.fixtures" >
-
-
+                    <div class="col-xs-12" ng-repeat="fixture in league.fixtures" >
                       <table class="table" >
-
                         <thead>
                         <tr>
                           <th colspan="3">
@@ -45,7 +32,6 @@
                         <tbody>
 
                           <tr ng-repeat="match in fixture.matches">
-
                             <td style="width: 33% !important;"
                                 class= "bet"
                                 ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status,  0, $parent.$parent.$index,$parent.$index,$index)"
@@ -79,7 +65,6 @@
                               <span ng-bind="match.away_team_goals" class="goal"></span>
                             </td>
                           </tr>
-
                         </tbody>
                       </table>
                     </div>
