--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -23,6 +23,16 @@ a:active { color: #FFFFFF !important; text-decoration: none  !important; }
     width: 100%;
 }
 
+#wrapperM {
+    z-index:2;
+    width: 80%;
+    left: -80%;
+    height: 100%;
+    -webkit-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
+    -moz-box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
+    box-shadow: 4px 4px 20px 0px rgba(0,0,0,0.66);
+}
+
 
 #wrapper2,
 #wrapper3 {
@@ -69,10 +79,7 @@ header, footer {
 
 header {
     top: 0;
-    background-image: url(../img/bg.png);
-    background-color: #313f75;
-    background-repeat: repeat-x;
-    background-attachment: fixed;
+    background: #313f75 url(../img/bg.png) repeat-x fixed;
 }
 
 footer {
