--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -18,7 +18,7 @@
     <div id="wrapper2" class="page" style="z-index: 2; left: 100%;" >
         <div class="row-back">
             <div class="row" style="margin-top: 10px !important;">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 pull-right" style="text-align: right;" >
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 pull-right text-right" >
                     <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
                 </div>
             </div>
