--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -1,53 +1,41 @@
-<div class="container" style="background-color: #000000;">
+<div class="row">
+    <div class="col-xs-10 col-xs-offset-1 text-center well">
+        <!--style="position: absolute; top: 10%;"-->
 
-	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" 
-			style="text-align: center; position: absolute; top: 25%;">
-			
-			<form name="msisdnForm" ng-submit="sendMsisdn()">
-				<div>
-					<h4 style="color:#808080; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" 
-						>Registre-se para acessar as fotos das melhores memes, todos os dias.</h4>
-					<h4 style="color:#808080; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" 
-						>Digite seu numero de celular.</h4>
-				</div>
-					
-					<div class="form-control-wrapper">
-						<input type="tel" class="form-control empty" 
-							style="color:#808080; text-shadow: -1px 1px 1px rgba(1,1,1,0.5)"
-							ng-model="msisdn"
-							id="msisdnInput" placeholder="# Numero">
-						<span class="material-input"></span>
-					</div>
-							
-					<button data-loading-text="Carregando..."
-						type="submit" class="btn btn-danger touch-enable"
-						style="background-color: #F6921E !important;"
-						>Experimente 7 dias grátis</button>
-			</form>
-				
-			<form name="passwordForm" ng-submit="doMsisdnLogin()">
-				<div id="passwordInputGroup" ng-class="{hidden: !isPasswordScreenVisible}">
-					<h4 style="color:#FFFFFF; text-shadow: -1px 1px 1px rgba(0,0,0,0.5)" 
-						>Digite a senha recebida por SMS.</h4>
-					<div class="form-control-wrapper">
-						<input type="password" class="form-control empty" 
-						style="color:#000000; text-shadow: -1px 1px 1px rgba(1,1,1,0.5)" 
-						id="passwordInput" ng-model="password" placeholder="Senha">
-						<span class="material-input"></span>
-					</div>
-					<div id="passSendButton" >
-						<button data-loading-text="Carregando..." autocomplete="off" type="submit" 
-						class="btn btn-danger touch-enable"   
-						style="background-color: #F6921E !important;">Enviar</button>			
-					</div>
-					<div id="resendPassButton">
-						<button data-loading-text="Carregando..." autocomplete="off" type="button" 
-						class="btn btn-danger touch-enable" ng-click="sendMsisdn()"
-						style="background-color: #F6921E !important;">Enviar novamente a senha</button>	
-					</div>							
-				</div>
-			</form>		
-		</div>
-	</div>											
+        <form name="msisdnForm" ng-submit="sendMsisdn()">
+            <div>
+                <h4 class="text-muted">{{strings.LOGIN_WELCOME_MESSAGE}}</h4>
+                <h4 class="text-muted">{{strings.MSISDN_HELPER}}</h4>
+            </div>
+
+            <div class="form-control-wrapper">
+                <input type="tel" class="form-control empty"ng-model="msisdn"
+                       id="msisdnInput" placeholder="{{strings.MSISDN_HOLDER}}">
+                <span class="material-input"></span>
+            </div>
+
+            <button data-loading-text="{{strings.LOADING_MESSAGE}}"
+                    type="submit" class="btn btn-danger btn-orange touch-enable"
+                    >{{strings.START_TRIAL_MESSAGE}}</button>
+        </form>
+
+        <form name="passwordForm" ng-submit="doMsisdnLogin()">
+            <div id="passwordInputGroup" ng-class="{hidden: !isPasswordScreenVisible}">
+                <h4 class="text-muted">{{strings.PASSWORD_LABEL}}</h4>
+                <div class="form-control-wrapper">
+                    <input type="password" class="form-control empty"
+                           id="passwordInput" ng-model="password" placeholder="{{strings.PASSWORD_HOLDER}}">
+                    <span class="material-input"></span>
+                </div>
+                <div id="passSendButton" >
+                    <button data-loading-text="{{strings.LOADING_MESSAGE}}" type="submit"
+                            class="btn btn-danger btn-orange touch-enable">{{strings.SEND_MESSAGE}}</button>
+                </div>
+                <div id="resendPassButton">
+                    <button data-loading-text="{{strings.LOADING_MESSAGE}}" type="button"
+                            class="btn btn-danger btn-orange touch-enable" ng-click="sendMsisdn()">{{strings.RESEND_MESSAGE}}</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
