FUTBOL BRASIL:  - Mejoras en ClientManager - Login redirecciona  a Settings o News dependiendo de si es nuevo usuario o no - Fixes en Team Selection

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -1,20 +1,22 @@
 
         <div class="row">
-            <form class="form-horizontal" style="margin-top: -20px;">
-                <div class="form-group search-bar well" style="margin-bottom: 0;">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Find your Team" ng-model="searchQuery">
-                        <span class="input-group-addon"><i class="icon mdi-action-search"></i></span>
+            <div class="col-xs-12">
+                <form class="form-horizontal" style="margin-top: -20px; position: absolute; z-index: 2;">
+                    <div class="form-group search-bar well">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Find your Team" ng-model="searchQuery">
+                            <span class="input-group-addon"><i class="icon mdi-action-search" style="font-size:1.8em;"></i></span>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
 
         <div class="row">
             <div id="wrapper" style="margin-top: 68px !important;">
                 <div class="scroller">
                     <div class="list-group">
-                        <div ng-repeat="team in teams | filter: searchQuery">
+                        <div ng-repeat="team in teams track by team.id_teams | filter: searchQuery">
                             <div class="list-group-item" ng-click="teamSelected(team)">
                                 <div class="row-action-primary">
                                     <i ng-class="getTeamClass(team)"></i>
