--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -33,7 +33,8 @@
                             <div class="form-group">
                                 <div class="togglebutton">
                                     <label>
-                                        <input type="checkbox" ng-checked="toggles.bets" ng-model="toggles.bets" ng-click="toggleBets()">
+                                        <input type="checkbox" ng-checked="toggles.bets"
+                                               ng-model="toggles.bets" ng-click="toggleBets()">
                                         <div class="toggle"></div>
                                         {{strings.TOGGLE_BETS}}
                                     </label>
@@ -45,7 +46,8 @@
                             <div class="form-group">
                                 <div class="togglebutton">
                                     <label>
-                                        <input type="checkbox" ng-checked="toggles.news" ng-click="toggleNews()">
+                                        <input type="checkbox" ng-checked="toggles.news"
+                                               ng-click="toggleNews()">
                                         <div class="toggle"></div>
                                         {{strings.TOGGLE_NEWS}}
                                     </label>
@@ -57,7 +59,8 @@
                             <div class="form-group">
                                 <div class="togglebutton">
                                     <label>
-                                        <input type="checkbox" ng-checked="toggles.mtm" ng-click="toggleMtm()">
+                                        <input type="checkbox" ng-checked="toggles.mtm"
+                                               ng-click="toggleMtm()">
                                         <div class="toggle"></div>
                                         {{strings.TOGGLE_MTM}}
                                     </label>
@@ -75,7 +78,9 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="btn btn-info text-center">{{strings.CONNECT_FACEBOOK}}</div>
+                            <button class="btn btn-info text-center"
+                                 ng-click="onFbButtonClick()" ng-bind="fbObject.fbButtonMsg">
+                            </button>
                         </div>
                     </div>
                 </div>
