--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -1,113 +1,83 @@
 <div id="wrapperH">
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
-
-
-            <li ng-style="getWidth()" ng-repeat="league in item.leagues" on-last-repeat>
-                <div class="container">
-
-                    <div class="row header">
-
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 tabs" style="text-align:left;" ng-click="prevPage()">
-                            <button ng-bind="item.leagues[$index-1].name"></button>
-                        </div>
-
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
-                            <span ng-bind="league.name"  style="font-size:1em;"></span>
-                        </div>
-
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 tabs" style="text-align:right;" ng-click="nextPage()">
-                            <button ng-bind="item.leagues[$index+1].name"></button>
-                        </div>
-
-
-
-
+            <li ng-style="getWidth()" ng-repeat="league in leagues track by league.id_competitions" on-last-repeat>
+                <div class="row header">
+                    <div class="col-xs-4 tabs text-left" ng-click="prevPage($index)">
+                        <button ng-bind="leagues[$index-1].name"></button>
                     </div>
 
+                    <div class="col-xs-4 text-center">
+                        <span ng-bind="league.name"  style="font-size:1em;"></span>
+                    </div>
 
-                    <div class="row">
-
-
-                        <div id="{{wrapper.getName($index)}}" class="wrapper" >
-                            <div class="scroller" >
-                                <div class="container">
-
-                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-repeat="fixture in league.fixtures" >
-
-
-                                        <table class="table" >
-
-                                            <thead>
-                                            <tr>
-                                                <th colspan="3">
-                                                    <span ng-bind="getDate(fixture.date)"></span>
-                                                </th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-
-                                            <tr ng-repeat="match in fixture.matches">
-
-                                                <td style="width: 33% !important;"
-                                                    class= "bet"
-                                                    ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status,  0, $parent.$parent.$index,$parent.$index,$index)"
-                                                    ng-class="{active: match.bet.client_bet == 0}">
-
-                                                    <span ng-bind="match.home_team.name"></span>
-                                                    <br />
-                                                    <span ng-bind="match.home_team_goals" class="goal"></span>
-
-                                                </td>
-
-                                                <td style="width: 33% !important;"
-                                                    class = "bet"
-                                                    ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
-                                                    ng-class="{active: match.bet.client_bet == 1}">
-
-                                                    <span class="date" style="font-weight:bold; font-size:2em;">VS</span>
-                                                    <br />
-                                                    <span ng-bind="getTime(match.date)" class="date"></span>
-                                                    <br />
-                              <span ng-bind="match.status.name"  class="status _{{match.status.id_status}}">
-                              </span>
-
-                                                </td>
-
-                                                <td style="width: 33% !important;"
-                                                    class = "bet"
-                                                    ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status,  2, $parent.$parent.$index,$parent.$index,$index)"
-                                                    ng-class="{active: match.bet.client_bet == 2}">
-
-                                                    <span ng-bind="match.away_team.name"></span>
-                                                    <br />
-                                                    <span ng-bind="match.away_team_goals" class="goal"></span>
-
-                                                </td>
-
-                                            </tr>
-
-                                            </tbody>
-                                        </table>
-
-
-
-                                    </div>
-
-                                </div>	<!--container-->
-                            </div>	<!--scroller-->
-                        </div> <!--wrapper-->
-                    </div> <!--row-->
-
-                </div> <!--container-->
-
-                <div class="bet-content"  ng-click="saveBet($index, league.id_competitions)">
-                    <span style="font-size:1.6em;">{{item.leagues[$index].client_bets}}</span> /
-                    <span style="font-size:2em;">{{item.leagues[$index].total_bets}}</span>
-                    <br />
-                    <button class="btn btn-primary">Salvar</button>
+                    <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
+                        <button ng-bind="leagues[$index+1].name"></button>
+                    </div>
                 </div>
 
+                <div class="row">
+                    <div id="{{vWrapper.getName($index)}}" class="wrapper">
+                        <div class="scroller" >
+                            <div class="container">
+                                <div class="col-xs-12" ng-repeat="fixture in league.fixtures track by fixture.date" >
+                                    <table class="table" >
+                                        <thead>
+                                        <tr>
+                                            <th colspan="3">
+                                                <span ng-bind="getDate(fixture.date)"></span>
+                                            </th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+
+                                        <tr ng-repeat="match in fixture.matches">
+                                            <td style="width: 33% !important;"
+                                                class= "bet"
+                                                ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
+                                                ng-class="{active: match.bet.client_bet === 0}">
+
+                                                <span ng-bind="match.home_team.name"></span>
+                                                <br/>
+                                                <span ng-bind="match.home_team_goals" class="goal"></span>
+                                            </td>
+
+                                            <td style="width: 33% !important;"
+                                                class = "bet"
+                                                ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
+                                                ng-class="{active: match.bet.client_bet == 1}">
+
+                                                <span class="date" style="font-weight:bold; font-size:2em;">VS</span>
+                                                <br />
+                                                <span ng-bind="getTime(match.date)" class="date"></span>
+                                                <br/>
+                                                <span ng-bind="match.status.name"  class="status _{{match.status.id_status}}"></span>
+
+                                            </td>
+
+                                            <td style="width: 33% !important;"
+                                                class = "bet"
+                                                ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
+                                                ng-class="{active: match.bet.client_bet == 2}">
+                                                <span ng-bind="match.away_team.name"></span>
+                                                <br/>
+                                                <span ng-bind="match.away_team_goals" class="goal"></span>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>	<!--container-->
+                        </div>	<!--scroller-->
+                    </div> <!--wrapper-->
+                </div> <!--row-->
+
+                <div class="bet-content"  ng-click="saveBet($index, league.id_competitions)">
+                    <span style="font-size:1.6em;">{{leagues[$index].client_bets}}</span> /
+                    <span style="font-size:2em;">{{leagues[$index].total_bets}}</span>
+                    <br/>
+                    <button class="btn btn-primary">Salvar</button>
+                </div>
             </li>
         </ul>
     </div>
