--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -17,7 +17,7 @@ a:active { color: #FFFFFF !important; text-decoration: none  !important; }
 #wrapper, #wrapperM{
     position: absolute;
     z-index: 1;
-    top: 50px;
+    top: 90px;
     bottom: 50px;
     left: 0;
     width: 100%;
@@ -25,6 +25,7 @@ a:active { color: #FFFFFF !important; text-decoration: none  !important; }
 
 #wrapperM {
     z-index:9;
+    top: 50px;
     width: 80%;
     left: -80%;
     height: 100%;
@@ -651,4 +652,57 @@ body.content-mtm .row-back {
 
 .btn-orange {
     background-color: #F6921E !important;
+}
+
+.text-center-vertical{
+    vertical-align: middle;
+}
+
+.navbar{
+    margin-bottom: 0;
+}
+
+.section-header {
+    line-height: 35px;
+    background-color: #3B9444;
+    color: #FFF;
+}
+
+.section-header .caption{
+    font-weight: bold;
+}
+
+.section-refresh {
+    position: absolute;
+    right: 0;
+    padding: 6px;
+}
+
+.section-refresh .icon {
+    font-size: 2.5em;
+    margin-right: 10px;
+    color: #ffffff !important;
+}
+
+.search-bar {
+    margin-bottom: 0 !important;
+}
+
+.search-list-wrapper {
+    top: 125px !important;
+}
+
+.search-list-item {
+    padding-top: 8px !important;
+    padding-bottom: 8px !important;
+}
+
+.lang-tag {
+    font-weight: bold;
+    font-style: normal;
+}
+
+.settings-wrapper {
+    top: 65px !important;
+    background-color: transparent !important;
 }
